Fix nav link spacing and add 404 message to other pages

--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ header a:hover {
     margin-right: 12px;
 }
 
-li + li {
+.account-actions li + li {
     margin-left: 12px;
 }
 
